--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "This is namaste react by Akshay Saini",
-  "main": "App.js",
+  "type": "module",
   "scripts": {
-    "test": "jest"
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
+    "test": "jest",
+    "watch-test": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -17,6 +20,31 @@
   },
   "homepage": "https://github.com/Dwaraka3/namaste-react#readme",
   "devDependencies": {
-    "parcel": "^2.10.3"
-  }
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-dom": "^4.0.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "parcel": "^2.11.0",
+    "postcss": "^8.4.35",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.1"
+  },
+  "dependencies": {
+    "@parcel/transformer-react-refresh-wrap": "^2.11.0",
+    "@reduxjs/toolkit": "^2.2.1",
+    "@types/react": "^18.2.57",
+    "@types/react-dom": "^18.2.19",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.1"
+  },
+  "browserslist": [
+    "last 2 versions"
+  ]
 }
